@@ -11,7 +11,6 @@ import liquibase.parser.core.ParsedNode;
 import liquibase.resource.ResourceAccessor;
 import liquibase.snapshot.DatabaseSnapshot;
 import liquibase.snapshot.RestoredDatabaseSnapshot;
-import liquibase.util.StreamUtil;
 import org.yaml.snakeyaml.Yaml;
 import org.yaml.snakeyaml.constructor.SafeConstructor;
 
@@ -26,7 +25,7 @@ public class YamlSnapshotParser extends YamlParser implements SnapshotParser {
         Yaml yaml = new Yaml(new SafeConstructor());
 
         try (
-            InputStream stream = StreamUtil.singleInputStream(path, resourceAccessor);
+                InputStream stream = resourceAccessor.openStream(null, path);
         ) {
             if (stream == null) {
                 throw new LiquibaseParseException(path + " does not exist");
@@ -41,7 +40,7 @@ public class YamlSnapshotParser extends YamlParser implements SnapshotParser {
 
             String shortName = (String) ((Map) rootList.get("database")).get("shortName");
 
-            Database database = DatabaseFactory.getInstance().getDatabase(shortName).getClass().newInstance();
+            Database database = DatabaseFactory.getInstance().getDatabase(shortName).getClass().getConstructor().newInstance();
             database.setConnection(new OfflineConnection("offline:" + shortName, null));
 
             DatabaseSnapshot snapshot = new RestoredDatabaseSnapshot(database);
